<resources>
    <string name="app_name">My Journey</string>
    <string name="date">Date</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="starting_time">Starting Time</string>
    <string name="time_hint">12:00 AM</string>
    <string name="end_time">End Time</string>
    <string name="place_hint">Kozhikkode</string>
    <string name="place">Place</string>
    <string name="attend_an_event">Attend an event</string>
    <string name="notes_here">Notes Here</string>
    <string name="add_visit">Add Visit</string>
    <string name="add_traveling">Add Traveling</string>
    <string name="place_from">Place From</string>
    <string name="place_to">Place To</string>
    <string name="place_hint_2">Kochi</string>
    <string name="purpose">Purpose</string>
    <string name="private_radio">Private</string>
    <string name="public_radio">Public</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="kl_01_a_2020">KL-01-A-2020</string>
    <string name="vehicle_registration_number">Vehicle Registration Number</string>
    <string name="description">Description</string>
    <string name="help">Help</string>
    <string name="name">Name</string>
    <string name="samuel_john">John Doe</string>
    <string name="phone">Phone</string>
    <string name="_91_9876543210">+91 987654321X</string>
    <string name="address">Address</string>
    <string name="address_here">House Name\nStreet Name\nPost, City, District\nPin Code</string>
    <string name="tell_us_about_yourself">Tell us about yourself</string>
    <string name="continue_text">CONTINUE</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="starting_point">Starting Point</string>
    <string name="destination">Destination</string>
    <string name="add_to_history">Add to History</string>
    <string name="time">Time</string>
    <string name="vehicle_category">Vehicle Category</string>
    <string name="bus">Bus</string>
    <string name="edit_my_journey">Edit My Journey</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="export_data">Export Data</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="about">About</string>
    <string name="sharelink">https://play.google.com/store/apps/details?id=com.ziyadkuttiady.myjourney</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="descriptionApp" translatable="false">About this app\n\nMy Journey app is an easy way to record \'s travel history.\n\nMy Journey is a mobile application developed by IT CELL, SSF KERALA to record people\'s journey details to support the health services in our collective battle against pandemic. The app is very helpful to list the travel history of oneself and to recognize the social interactions and reduces the chance of dissemination of the decease.</string>
    <string name="change_personal_details">Change Personal Details</string>
    <string name="no">No</string>
    <string name="section">Section</string>
    <string name="delete">Delete</string>
    <string name="no_data_available">\n \n No Data available Use \'+\' Button given below to add your History</string>

    <string-array name="vehicle_types">
        <item>Walk</item>
        <item>Car</item>
        <item>Bike</item>
        <item>Cycle</item>
        <item>Auto Rickshaw</item>
        <item>Bus</item>
        <item>Jeep</item>
        <item>Train</item>
        <item>Aeroplane</item>
        <item>Truck</item>
    </string-array>


    <string name="ob_header1">ADD YOUR JOURNEY</string>
    <string name="ob_header2">FILL YOUR JOURNEY DETAILS</string>
    <string name="ob_header3">CLICK ADD TO HISTORY BUTTON</string>

    <string name="ob_get_started">GET STARTED</string>

    <string name="ob_desc1">To Add Your Journey History into My Journey Click \'+\' Button given in Home Screen</string>
    <string name="ob_desc2">Fill the opened form with your journey details correctly</string>
    <string name="ob_desc3">After Filling Your Journey Details Click \'Add to History\' Button to add your Journey to My Journey</string>
    <string name="how_to_use_my_journey">How to Use My Journey</string>
    <string name="update">Update</string>

</resources>
