<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".PersonalDataCollectActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_16"
        android:gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_16"
            android:gravity="start"
            android:text="@string/tell_us_about_yourself"
            android:theme="@style/headline" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:text="@string/name"
            android:theme="@style/label" />

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_16"
            android:background="@drawable/edit_text_background"
            android:hint="@string/samuel_john"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:lines="1"
            android:padding="@dimen/padding_12"
            android:textColorHint="@color/grey_600" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:text="@string/phone"
            android:theme="@style/label" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin_16"
            android:background="@drawable/edit_text_background"
            android:hint="@string/_91_9876543210"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:lines="1"
            android:padding="@dimen/padding_12"
            android:textColorHint="@color/grey_600" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:text="@string/address"
            android:theme="@style/label" />

        <EditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/default_margin_16"
            android:background="@drawable/edit_text_background"
            android:gravity="start"
            android:hint="@string/address_here"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="@dimen/padding_12"
            android:textColorHint="@color/grey_600" />

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:text="@string/continue_text"
            android:textAllCaps="false"
            android:theme="@style/button" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>